# src/main/resources/openapi/customer.yaml
@@ -4,6 +4,23 @@ info:
   version: 1.0.0
 
 paths:
+  /companies/listAll:
+    get:
+      summary: List all companies
+      operationId: listAllCompanies
+      responses:
+        '200':
+          description: A list of companies
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Company'
+        '404':
+          description: No companies are found.
+        '503':
+          description: Unexpected error.
   /customers/listAllCustomers:
     get:
       summary: List all customers
@@ -51,7 +68,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Customer'
         '404':
-          description: A user with the specified ID was not found.
+          description: Customer was not found.
         '503':
           description: Unexpected error.
 
@@ -126,7 +143,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Customer'
         '404':
-          description: A user with the specified ID was not found.
+          description: Customer was not found.
         '503':
           description: Unexpected error.
 
